third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/transmute-ref-dst-mutable.stderr
error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ types differ in mutability
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-nightly/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^
   |                      |
   |                      types differ in mutability
   |                      arguments to this function are incorrect
   |
   = note: expected mutable reference `&mut u8`
                      found reference `&_`
help: the return type of this call is `&_` due to the type of the argument passed
  --> tests/ui-nightly/transmute-ref-dst-mutable.rs:18:22
   |
18 |     let _: &mut u8 = transmute_ref!(&0u8);
   |                      ^^^^^^^^^^^^^^^^^^^^ this argument influences the return type of `must_use`
note: function defined here
  --> src/util/macro_util.rs
   |
   | pub const fn must_use<T>(t: T) -> T {
   |              ^^^^^^^^
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
